<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengeActivity"
    android:background="@color/colorBlueshWhite">

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/challengeRecyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="702dp"-->
<!--        android:padding="4dp"-->
<!--        android:scrollbars="vertical"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/toolBar" />-->

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomNavigation"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:menu="@menu/bottom_navigation"-->
<!--        android:background="@color/colorWhite"-->
<!--        android:paddingStart="10dp"-->
<!--        android:paddingEnd="10dp" />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogoPicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/trophy_30px"
            android:tint="@color/colorPrimary"
            />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/challengeTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/raleway_semi_bold"
        android:text="@string/challenge"
        android:textColor="@color/blueshBlack"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardLogoPicture"
        app:layout_constraintEnd_toStartOf="@+id/cardLogoPicture"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardLogoPicture"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textWhatChallenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_challenge"
        android:textSize="36sp"
        android:textColor="@color/blueshBlack"
        android:fontFamily="@font/raleway_bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cardLogoPicture"
        />

    <TextView
        android:id="@+id/textAreYouDoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/are_you_doing"
        android:textSize="32sp"
        android:textColor="@color/blueshBlack"
        android:fontFamily="@font/raleway_medium"
        android:alpha="0.9"
        app:layout_constraintTop_toBottomOf="@+id/textWhatChallenge"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/challengesViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationBar"
        app:layout_constraintTop_toBottomOf="@+id/textAreYouDoing"
        />

    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:iconSize="20dp"
        app:iconTint="@color/colorInactive"
        app:iconTintActive="@color/colorPrimary"
        app:indicatorColor="@color/colorWhite"
        app:menu="@menu/bottom_navigation"
        app:textColor="@color/colorPrimary"
        app:textSize="16sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>